# video_message

./: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  db.sql  docker-compose.yaml  install.sh  mariadb-init.sql  nginx.conf
.github/workflows/: build.yml
src/: db.rs  db.rs.bak  handlers.rs  main.rs  routers.rs  util.rs
src/models/: call.rs  chan_msg.rs  data_index.rs  mod.rs  models.rs  national_alarm.rs  on_off_line.rs  report.rs  warn.rs
