[package]
name = "hellorust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = {version ="4.0.0"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6.2", features = ["mysql", "runtime-tokio-rustls", "chrono","offline"] }
reqwest = { version = "0.11.24", features = ["json"] }
dotenv = "0.15.0"
openssl = "0.10.64"
openssl-sys = { version = "0.9.102", features = ["vendored"] }

[profile.release]
lto = true
opt-level = "z"
panic = "abort"