[package]
name = "videoMsg"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = {version ="4.0.0"}
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.24", features = ["json"] }
dotenv = "0.15.0"
chrono = "0.4"

[profile.release]
lto = true
opt-level = "z"
panic = "abort"

[[bin]]
name = "videoMsg"
path = "src/main.rs"